# OAuth2-plugin-example

./: .gitignore  Dockerfile  README.md  cookies.txt  docker-compose.yml  prometheus.yml
.agent/rules/: backend-rule.md
.agent/workflows/: build.md  db-reset.md  docker-setup.md  pre-commit.md  stress-test.md  test-checklist.md  test-e2e.md  verify-docker.md
.github/workflows/: ci.yml
OAuth2Backend/: CMakeLists.txt  build.bat  build.sh  build_log_v2.txt  config.dev.json  config.json  config.prod.json  config_env_runtime.json  main.cc  model.json  openapi.yaml  run_server.bat
OAuth2Backend/controllers/: AdminController.cc  AdminController.h  GoogleController.cc  GoogleController.h  MockWeChatController.cc  MockWeChatController.h  OAuth2Controller.cc  OAuth2Controller.h  WeChatController.cc  WeChatController.h
OAuth2Backend/docs/: api_reference.md  configuration_guide.md  data_persistence.md  persistence_design.md  plugin_integration.md  security_hardening.md
OAuth2Backend/document/: 持久化方案.md
OAuth2Backend/filters/: AuthorizationFilter.cc  AuthorizationFilter.h  OAuth2Middleware.cc  OAuth2Middleware.h  RateLimiterFilter.cc  RateLimiterFilter.h
OAuth2Backend/models/: Oauth2Clients.cc  Oauth2Clients.h  Users.cc  (+1 more)
OAuth2Backend/test/: AdvancedStorageTest.cc  CMakeLists.txt  ConfigTest.cc  EnvConfigTest.cc  IntegrationE2ETest.cc  MemoryStorageTest.cc  PluginTest.cc  PostgresStorageTest.cc  RateLimiterTest.cc  RedisStorageTest.cc  SchemaSetup.cc  UserTest.cc  test_main.cc
OAuth2Frontend/: README.md  nginx.conf  package-lock.json  package.json  vite.config.js
(+36 files in other folders)
